--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "three-extruded-image",
   "version": "0.0.1",
   "type": "module",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
