--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/index.ts --format cjs,esm --dts-resolve",
+    "build": "vite build",
+    "build-library": "tsup src/index.ts --format cjs,esm --dts-resolve",
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm"
   },
