--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@types/omggif": "^1.0.5",
     "@types/three": "^0.165.0",
+    "omggif": "^1.0.10",
     "vite-plugin-externalize-deps": "^0.8.0"
   },
   "peerDependencies": {
